# philtorch

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  _version.py  pixi.toml  pyproject.toml  setup.py
.github/.workflows/: version.yml
.github/workflows/: python-package.yml  python-publish-stable.yml  python-publish.yml  version.yml
examples/: estimate_lowpass.ipynb
philtorch/: __init__.py  _helion.py  _version.py  core.py  mat.py  poly.py  signal.py  utils.py
philtorch/csrc/: assoc_recur_mv.cu  host_lti_recur.cpp  host_lti_recurN.cpp  host_recur2.cpp  host_recurN.cpp  lti_recur.cu  lti_recur2.cu  recur2.cu  recur2.cuh
philtorch/lpv/: __init__.py  filtering.py  filters.py  lfilter.py  recur.py  scan.py  ssm.py  utils.py
philtorch/lti/: __init__.py  filtering.py  filters.py  interp.py  recur.py  scan.py  ssm.py
philtorch/prototype/: nl.py  poly.py  signal.py  utils.py
tests/: test_core.py  test_grad.py  test_interp.py  test_lpv_filters.py  test_lpv_lfilter.py  test_lpv_ssm.py  test_lti_comb.py  test_lti_lfilter.py  test_lti_ssm.py  test_nl.py  test_pt2_comp.py  test_recur_ext.py  test_scan.py
